# OctobIR

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGNER_BRIEF.md  LED_METER_IMPLEMENTATION.md  LICENSING.md  MONOREPO_MIGRATION_PLAN.md  Makefile  README.md  REUSE.toml  THIRD_PARTY_NOTICES.txt  UI_CONTROL_INVENTORY.md  UI_DESIGN_PLAN.md  UI_IMPLEMENTATION_PLAN.md  plugin.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-juce.yml  release-vcv.yml
docs/: ART_AND_CRAFT.md  ART_AND_CRAFT.txt  INSTALLER_IMPLEMENTATION_PLAN.md  RELEASING.md
installers/macos/: build-pkg.sh
installers/octobir/macos/: build-pkg.sh
installers/windows/: OctobIR.iss  OctoberPluginsSuite.iss
libs/juce-ui-shared/: CMakeLists.txt
libs/juce-ui-shared/Source/: LCDSpectrumDisplay.h
libs/octob-ir-core/: CMakeLists.txt  README.md
libs/octob-ir-core/include/octob-ir-core/: AudioBuffer.hpp  IRProcessor.hpp  Types.hpp
libs/octob-ir-core/src/: AudioBuffer.cpp  IRLoader.cpp  IRProcessor.cpp
libs/octobass-core/: CMakeLists.txt
libs/octobass-core/include/octobass-core/: BassProcessor.hpp  BusCompressor.hpp  Compressor.hpp  CompressorMode.hpp  Crossover.hpp  FETCompressor.hpp  GraphicEQ.hpp  NoiseGate.hpp  OptoCompressor.hpp  Types.hpp  VCACompressor.hpp
libs/octobass-core/src/: BassProcessor.cpp  BusCompressor.cpp  Compressor.cpp  Crossover.cpp  FETCompressor.cpp  GraphicEQ.cpp  NamProcessor.cpp  NoiseGate.cpp  OptoCompressor.cpp  VCACompressor.cpp
libs/octobass-core/tests/: BassProcessorAudioTests.cpp  BassProcessorTests.cpp  CMakeLists.txt  CompressorAudioTests.cpp  CompressorTests.cpp  CrossoverTests.cpp  GraphicEQTests.cpp  NoiseGateTests.cpp
libs/octobir-core/: CMakeLists.txt  README.md
libs/octobir-core/include/octobir-core/: AudioBuffer.hpp  IRLoader.hpp  IRProcessor.hpp  Types.hpp
libs/octobir-core/src/: AudioBuffer.cpp  IRLoader.cpp  IRProcessor.cpp
libs/octobir-core/tests/: BlendExtremeTests.cpp  CMakeLists.txt  ClearIRTests.cpp  ComponentTests.cpp  DynamicModeAudioTests.cpp  IRLoaderTests.cpp  IRProcessorLogicTests.cpp  IRProcessorTests.cpp  LatencyCompensationTests.cpp  README.md  ResetTests.cpp  SampleRateChangeTests.cpp  SidechainAudioTests.cpp  SidechainTests.cpp  StereoComponentTests.cpp  TrimGainTests.cpp
plugins/juce-multiformat/: CMakeLists.txt
plugins/juce-multiformat/Source/: LCDDisplay.h  OctobIRLookAndFeel.cpp  OctobIRLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/juce-multiformat/tests/: CMakeLists.txt  PluginAudioTests.cpp  PluginProcessorTests.cpp
plugins/octobass/juce/: CMakeLists.txt
plugins/octobass/juce/Source/: GraphicEQDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.h
plugins/octobass/juce/tests/: CMakeLists.txt  PluginProcessorTests.cpp
plugins/octobir/vcv-rack/: plugin.json
plugins/octobir/vcv-rack/src/: opc-vcv-ir.cpp  opc-vcv-ir.hpp
plugins/octobir/vcv-rack/tests/: VcvAudioTests.cpp  rack_stub.hpp
plugins/vcv-rack/: CMakeLists.txt  Makefile  plugin.json
plugins/vcv-rack/src/: opc-vcv-ir.cpp  opc-vcv-ir.hpp  plugin.cpp  plugin.hpp
scripts/: README.md  build-all.sh  build-release-all.sh  build-release-juce.sh  build-release-vcv.sh  header.txt  setup-dev.sh  show-header.sh  sync-vcv-version.sh  vcv-sdk-config.sh
scripts/hooks/: pre-commit
scripts/lib/: platform.sh
src/: convolution.cpp  convolution.h  opc-vcv-ir.cpp  plugin.cpp  plugin.hpp
